hphp/hack/test/typecheck/expression_trees/loop.php.like_types.exp
File "loop.php", line 17, characters 16-48:
Typing error (Typing[4110])
  File "loop.php", line 17, characters 16-48:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 41, characters 38-76:
  But got `dynamic` because it is an unenforceable type
File "loop.php", line 17, characters 31-34:
Typing error (Typing[4110])
  File "loop.php", line 17, characters 31-34:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 29, characters 5-43:
  But got `dynamic` because it is an unenforceable type
File "loop.php", line 17, characters 39-41:
Typing error (Typing[4110])
  File "loop.php", line 17, characters 39-41:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 48, characters 6-34:
  But got `dynamic` because it is an unenforceable type
File "loop.php", line 18, characters 15-68:
Typing error (Typing[4110])
  File "loop.php", line 18, characters 15-68:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 41, characters 38-76:
  But got `dynamic` because it is an unenforceable type
File "loop.php", line 18, characters 33-33:
Typing error (Typing[4110])
  File "loop.php", line 18, characters 33-33:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "loop.php", line 18, characters 36-39:
Typing error (Typing[4110])
  File "loop.php", line 18, characters 36-39:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 29, characters 5-43:
  But got `dynamic` because it is an unenforceable type
File "loop.php", line 18, characters 52-52:
Typing error (Typing[4110])
  File "loop.php", line 18, characters 52-52:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "loop.php", line 18, characters 57-59:
Typing error (Typing[4110])
  File "loop.php", line 18, characters 57-59:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 48, characters 6-34:
  But got `dynamic` because it is an unenforceable type
